added delete button

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
       <div id="password-view-actions">
         <button id="password-view-save">Save</button>
         <button id="password-view-cancel">Cancel</button>
+        <button id="password-view-delete">Delete</button>
       </div>
     </div>
   </div>
