--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,9 @@
 
   <div id="error"></div>
 
+  <div id="issue">Have an issue or feature suggestion? Open an issue on <a
+      href="https://github.com/anbcodes/simplistic-passwords">Github</a></div>
+
   <script src="./index.js"></script>
 </body>
 
