--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,7 @@
 
     <div>
       <button id="add-password">New Password</button>
+      <button id="change-password">Change Master Password</button>
       <button id="logout">Logout</button>
     </div>
   </div>
